--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,17 @@ img {
   display: block;
   max-width: 100%;
 }
+.timer {
+  font-size: 25;
+  display: flex;
+  text-align: center;
+  margin: 20px;
+  gap: 15;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+}
+.value {
+  font-weight: bold;
+}
